# bnf-compiler

./: .clang-format  .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
include/: bnf-notation.hpp  bnf-scanner.hpp  input-file.hpp  input.hpp  lexer.hpp  output-json.hpp  output-xml.hpp  parser-by-bnf.hpp  parser.hpp  token.hpp
simple/: ini.bnf  xml.bnf
src/: bnf-notation.cpp  bnf-scanner.cpp  input-file.cpp  lexer.cpp  output-json.cpp  output-xml.cpp  parser-by-bnf.cpp  parser.cpp  token.cpp
